src/tests/snapshots/cendol__tests__ast_dumper_coverage__atomic_ops_and_case_range-2.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output_parser
---
1: TranslationUnit(decls=2..2) (parser kind)
2: Function(name=f, symbol=1, ty=TypeRef(base=20, class=Function, ptr=0, arr=None), params=[], body=4)
3: LiteralString(f)
4: CompoundStatement(stmts=5..6)
5: VarDecl(name=a, ty=Int, storage=None)
6: Switch(condition=8, body=9)
7: LiteralInt(0, None)
8: Ident(a)
9: CompoundStatement(stmts=10..10)
10: CaseRange(11, 12, 13)
11: LiteralInt(1, None)
12: LiteralInt(5, None)
13: Break
