src/tests/snapshots/cendol__tests__ast_dumper_coverage__atomic_ops_and_case_range.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output_parsed
---
1: TranslationUnit(decls=[3])
3: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Void)], declarator: Function { inner: Identifier("f", TypeQualifiers(0x0)), params: [], is_variadic: false }, body: 4 })
4: CompoundStatement(stmts=[5, 7, 18])
5: Declaration(ParsedDeclarationData { specifiers: [TypeSpecifier(Int)], init_declarators: [ParsedInitDeclarator { declarator: Identifier("a", TypeQualifiers(0x0)), initializer: Some(6), span: SourceSpan(2199107141668) }] })
6: LiteralInt(0, None)
7: Declaration(ParsedDeclarationData { specifiers: [TypeSpecifier(Int)], init_declarators: [ParsedInitDeclarator { declarator: Identifier("b", TypeQualifiers(0x0)), initializer: Some(11), span: SourceSpan(2199459463227) }] })
8: Ident(a)
9: UnaryOp(AddrOf, 8)
10: LiteralInt(0, None)
11: AtomicOp(LoadN, args=[9, 10])
12: Ident(a)
13: CompoundStatement(stmts=[17])
14: LiteralInt(1, None)
15: LiteralInt(5, None)
16: Break
17: CaseRange(14, 15, 16)
18: Switch(12, 13)
