src/tests/snapshots/cendol__tests__ast_dumper_coverage__parsed_ast_builtins.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=[2, 4, 24, 26])
2: Declaration(ParsedDeclarationData { specifiers: [StorageClass(Typedef), TypeSpecifier(VaList)], init_declarators: [ParsedInitDeclarator { declarator: Identifier("va_list", TypeQualifiers(0x0)), initializer: None, span: SourceSpan(2199140696099) }] })
4: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Int)], declarator: Function { inner: Identifier("f", TypeQualifiers(0x0)), params: [ParsedParamData { specifiers: [TypeSpecifier(Int)], declarator: Some(Identifier("x", TypeQualifiers(0x0))), span: SourceSpan(2199107141690) }], is_variadic: true }, body: 5 })
5: CompoundStatement(stmts=[6, 7, 11, 14, 17, 22])
6: Declaration(ParsedDeclarationData { specifiers: [TypeSpecifier(TypedefName("va_list"))], init_declarators: [ParsedInitDeclarator { declarator: Identifier("ap", TypeQualifiers(0x0)), initializer: None, span: SourceSpan(2199056810076) }] })
7: ExpressionStatement(10)
8: Ident(ap)
9: Ident(x)
10: BuiltinVaStart(8, 9)
11: Declaration(ParsedDeclarationData { specifiers: [TypeSpecifier(Int)], init_declarators: [ParsedInitDeclarator { declarator: Identifier("y", TypeQualifiers(0x0)), initializer: Some(13), span: SourceSpan(2199509794967) }] })
12: Ident(ap)
13: BuiltinVaArg(ParsedType { base: 1, declarator: 1, qualifiers: TypeQualifiers(0x0) }, 12)
14: ExpressionStatement(16)
15: Ident(ap)
16: BuiltinVaEnd(15)
17: ExpressionStatement(20)
18: Ident(ap)
19: Ident(ap)
20: BuiltinVaCopy(18, 19)
21: Ident(y)
22: Return(21)
24: Declaration(ParsedDeclarationData { specifiers: [TypeSpecifier(Record(false, Some("S"), Some(ParsedRecordDefData { tag: Some("S"), members: Some([ParsedDeclarationData { specifiers: [TypeSpecifier(Int)], init_declarators: [ParsedInitDeclarator { declarator: Identifier("a", TypeQualifiers(0x0)), initializer: None, span: SourceSpan(2199040033078) }] }]), is_union: false })))], init_declarators: [] })
26: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Int)], declarator: Function { inner: Identifier("g", TypeQualifiers(0x0)), params: [], is_variadic: false }, body: 27 })
27: CompoundStatement(stmts=[31])
29: MemberAccess(28, a, .)
30: BuiltinOffsetof(ParsedType { base: 2, declarator: 2, qualifiers: TypeQualifiers(0x0) }, 29)
31: Return(30)
