src/tests/snapshots/cendol__tests__ast_dumper_coverage__parsed_ast_empty_stmt.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=[3])
3: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Void)], declarator: Function { inner: Identifier("f", TypeQualifiers(0x0)), params: [], is_variadic: false }, body: 4 })
4: CompoundStatement(stmts=[5])
5: EmptyStatement
