src/tests/snapshots/cendol__tests__ast_dumper_coverage__parsed_ast_gnu_stmt_expr.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=[3])
3: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Int)], declarator: Function { inner: Identifier("f", TypeQualifiers(0x0)), params: [], is_variadic: false }, body: 4 })
4: CompoundStatement(stmts=[11])
5: CompoundStatement(stmts=[6, 8])
6: Declaration(ParsedDeclarationData { specifiers: [TypeSpecifier(Int)], init_declarators: [ParsedInitDeclarator { declarator: Identifier("x", TypeQualifiers(0x0)), initializer: Some(7), span: SourceSpan(2199107141656) }] })
7: LiteralInt(1, None)
8: ExpressionStatement(9)
9: Ident(x)
10: GnuStatementExpression(5, 9)
11: Return(10)
