src/tests/snapshots/cendol__tests__ast_dumper_coverage__parsed_ast_sizeof_alignof.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=[3])
3: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Int)], declarator: Function { inner: Identifier("f", TypeQualifiers(0x0)), params: [], is_variadic: false }, body: 4 })
4: CompoundStatement(stmts=[14])
5: LiteralFloat(3.14, None)
6: Cast(ParsedType { base: 1, declarator: 1, qualifiers: TypeQualifiers(0x0) }, 5)
7: SizeOfType(ParsedType { base: 2, declarator: 2, qualifiers: TypeQualifiers(0x0) })
8: BinaryOp(Add, 6, 7)
9: LiteralInt(1, None)
10: SizeOfExpr(9)
11: BinaryOp(Add, 8, 10)
12: AlignOf(ParsedType { base: 3, declarator: 3, qualifiers: TypeQualifiers(0x0) })
13: BinaryOp(Add, 11, 12)
14: Return(13)
