src/tests/snapshots/cendol__tests__ast_dumper_coverage__parsed_ast_ternary.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=[3])
3: FunctionDef(ParsedFunctionDefData { specifiers: [TypeSpecifier(Int)], declarator: Function { inner: Identifier("f", TypeQualifiers(0x0)), params: [], is_variadic: false }, body: 4 })
4: CompoundStatement(stmts=[9])
5: LiteralInt(1, None)
6: LiteralInt(2, None)
7: LiteralInt(3, None)
8: TernaryOp(5, 6, 7)
9: Return(8)
